# pro-plan-api

./: .dockerignore  .env  .env.dist  .env.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml  default.yml  publish.yml
app/: main.py
app/application/customer/: get_customer_use_case.py  get_or_create_customer_use_case.py
app/application/email/: message.py  sender.py
app/application/stripe/: billing_portal_client.py  checkout_client.py  create_billing_portal_session_use_case.py  create_checkout_session_use_case.py  enums.py  errors.py  handle_webhook_event_use_case.py  process_webhook_event_use_case.py  verify_webhook_use_case.py  webhook_event.py  webhook_verifier.py
app/application/subscription/: create_or_get_use_case.py  create_or_update_command.py  create_or_update_use_case.py  create_update.py  create_update_command.py  get_or_create_subscription_use_case.py  get_or_create_use_case.py  get_subscription_use_case.py  get_use_case.py  renew_use_case.py  renewal_command.py  renewal_use_case.py  upsert.py
app/domain/: errors.py
app/domain/customer/: customer.py  email.py  errors.py  repository.py
app/domain/payment/: payment.py  repository.py
app/domain/subscription/: email.py  email_sender.py  errors.py  period.py  price.py  repository.py  state.py  subscription.py  subscription_expired.py  subscription_repository.py
app/infrastructure/: config.py  database.py  email_sender.py  settings.py  sqlmodels.py
app/infrastructure/database/: connection.py
app/infrastructure/persistence/: connection.py  models.py  subscription_schema.py
app/infrastructure/stripe/: billing_portal_client.py  client.py  (+2 more)
tests/: conftest.py
tests/functional/: conftest.py  fake_email_sender.py
tests/generator/: customer.py  payment.py  subscription.py
(+121 files in other folders)
