[project]
name = "pro-subscription-management-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.pytest.ini_options]
anyio_mode = "auto"

[tool.ruff.lint]
select = ["I"]
