[project]
name = "pro-plan-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "stripe>=15.3.1",
]

[dependency-groups]
dev = [
    "httpx2>=2.9.1",
    "pytest>=9.1.1",
    "ruff>=0.16.0",
    "sqlalchemy-utils>=0.42.1",
    "ty>=0.0.63",
]

[tool.pytest.ini_options]
anyio_mode = "auto"

[tool.ruff.lint]
extend-select = ["ANN", "E", "FAST", "I", "N", "UP", "W"]
ignore = ["E402"]
